# noteify

./: .gitignore  README.md
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2fa45a72d135_added_notionblock_table.py  2fbefe53725c_stable_added_some_fields_in_notion_page_.py  36819ea3b520_added_notionpage_table.py  37407c620843_stable_removed_fields_from_notion_page_.py  3c007b51ea92_added_is_loggedin_field.py  52e8553a9cce_stable_edited_notion_block_model.py  58f988d7b836_upgraded_userimages_model.py  676631413b21_stable_added_notiondb_id_for_user.py  7718c3575cca_added_userimage_model.py  9ab7fe46a7fa_fixed_the_foreignkey_issue.py  b329fc3c527a_stable_added_user_categories_model.py  bb42109a2a01_added_category_field_in_userimages.py  c09d8aa547a1_changed_foreign_key_fields.py  e4560c87edfb_fixed_double_initial_page_creation_.py  ea82ec491487_stable_added_preferences_column_in_.py
backend/app/: config.py  main.py  password_utils.py  utils.py
backend/app/core/: cohereClient.py  groqClient.py  middleware.py  notion_sdk.py  prompt_config.py  prompt_config.template.json  prompts.py  qdrantClient.py  s3_handler.py
backend/app/db/: database.py  models.py  schemas.py
backend/app/routers/: auth.py  help.py  images.py  notes.py  oauth2.py  pdf.py
backend/static/pdfjs/: guide.css  guide.html  guide.js  notion_success.html  registration_success.html  signup.html  tmp.html
extension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
nginx/: nginx.conf
(+1 files in other folders)
